Fix Git Ignore...

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .DS_store
 /UdinGame.xcodeproj/xcuserdata/
-/UdinGame.xcodeporj/project.xcworkspace/xcuserdata
+/UdinGame.xcodeporj/project.xcworkspace/xcuserdata/
 
